k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sky-menu
  labels:
    app: sky-menu

spec:
  replicas: 1
  selector:
    matchLabels:
      app: sky-menu
  template:
    metadata:
      labels:
        app: sky-menu
    spec:
      containers:
        - name: sky-menu
          image: eyopaa/sky-menu:latest
          
          ports:
            - containerPort: 3000
