k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: sky-menu-api-service

spec: 
  selector: 
   app: sky-menu
   
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
