k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sky-menu
  

spec: 
  ingressClassName: nginx
  rules: 
  - host: localhost
    http: 
      paths: 
      - pathType: Prefix
        path: /
        backend: 
          service: 
            name: sky-menu-api-service
            port: 
              number: 3000
